--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <!-- Header -->
     <header class="bg-dark text-white p-4">
-        <div class="container d-flex justify-content-between align-items-center">
-            <h1 class="text-light">KubEdge</h1>
+        <div class="container-fluid d-flex justify-content-between align-items-center">
+             <img src="images/logo.png" alt="KubEdge Logo" class="img-fluid mb-4 logo-size">
             <nav>
                 <a href="#about" class="text-white me-3">About</a>
                 <a href="#documentation" class="text-white">Documentation</a>
