--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
     <main class="container my-5">
         <!-- Hero Section -->
         <section class="hero text-center" data-aos="fade-in">
-            <a href="#documentation" class="btn btn-dark btn-lg mt-3 px-5 py-3 shadow-lg" style="font-size: 1.2rem;">Dashboard</a>
+            <a href="https://deveshrathore123.github.io/mainpage_code/" class="btn btn-dark btn-lg mt-3 px-5 py-3 shadow-lg" style="font-size: 1.2rem;">Dashboard</a>
+
         </section>
 
         <!-- Tools Section -->
