--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
         <section class="cta-section text-center py-5 mt-5" style="background-color: #333;">
             <h2 class="text-white">Get Started with KubEdge Today</h2>
             <p class="text-white">Ready to experience the power of KubEdge? Sign up today and unlock the full potential of cloud computing with Kubernetes and Docker.</p>
-            <a href="#documentation" class="btn btn-light btn-lg">Start Now</a>
+            <a href="https://deveshrathore123.github.io/mainpage_code/" class="btn btn-dark btn-lg mt-3 px-5 py-3 shadow-lg" style="font-size: 1.2rem;">Start Now</a>
+
         </section>
 
         <!-- Testimonial Section -->
