--- a/index.html
+++ b/index.html
@@ -140,54 +140,54 @@
 
         <!-- Tools Section -->
         <section class="tools-section" id="integrated-tools">
-            <h2 class="text-center" style="color: #333;">Integrated Tools</h2>
+            <h2 class="text-center" style="color: #fff;">Integrated Tools</h2>
             <div class="tools-cards d-flex justify-content-center flex-wrap gap-5">
                 <!-- Tool Cards -->
                 <div class="tools-card">
                     <img src="images/CiCd.png" alt="CI/CD" class="img-fluid mb-3 logo-size">
-                    <h4 style="color: #333;">CI/CD</h4>
-                    <p style="color: #555;">Seamless integration for continuous integration and delivery.</p>
+                    <h4 style="color: #fff;">CI/CD</h4>
+                    <p style="color: #fff;">Seamless integration for continuous integration and delivery.</p>
                 </div>
                 <div class="tools-card">
                     <img src="images/docker.png" alt="Docker" class="img-fluid mb-3 logo-size">
-                    <h4 style="color: #333;">Docker</h4>
-                    <p style="color: #555;">Streamline application deployment with containerization.</p>
+                    <h4 style="color: #fff;">Docker</h4>
+                    <p style="color: #fff;">Streamline application deployment with containerization.</p>
                 </div>
                 <div class="tools-card">
                     <img src="images/Kubernetes.png" alt="Kubernetes" class="img-fluid mb-3 logo-size">
-                    <h4 style="color: #333;">Kubernetes</h4>
-                    <p style="color: #555;">Effortless orchestration for complex cloud environments.</p>
+                    <h4 style="color: #fff;">Kubernetes</h4>
+                    <p style="color: #fff;">Effortless orchestration for complex cloud environments.</p>
                 </div>
                 <div class="tools-card">
                     <img src="images/Prometheus.png" alt="Prometheus" class="img-fluid mb-3 logo-size">
-                    <h4 style="color: #333;">Prometheus</h4>
-                    <p style="color: #555;">Advanced monitoring and alerting for cloud infrastructure.</p>
+                    <h4 style="color: #fff;">Prometheus</h4>
+                    <p style="color: #fff;">Advanced monitoring and alerting for cloud infrastructure.</p>
                 </div>
                 <div class="tools-card">
                     <img src="images/grafana.png" alt="Grafana" class="img-fluid mb-3 logo-size">
-                    <h4 style="color: #333;">Grafana</h4>
-                    <p style="color: #555;">Visualize and analyze your cloud infrastructure metrics.</p>
+                    <h4 style="color: #fff;">Grafana</h4>
+                    <p style="color: #fff;">Visualize and analyze your cloud infrastructure metrics.</p>
                 </div>
             </div>
         </section>
 
         <!-- About Section -->
         <section class="about-section mt-5 text-center">
-            <h2 style="color: #333;">About KubEdge</h2>
+            <h2 style="color: #fff;">About KubEdge</h2>
             <img src="images/hero-image.jpg" alt="Hero Image" class="img-fluid my-4" style="border-radius: 8px; max-height: 300px;">
-            <p style="color: #555;"><strong>Devesh Singh Rathore</strong> is the creator of KubEdge, a tool designed to revolutionize cloud computing using Kubernetes and Docker.</p>
+            <p style="color: #fff;"><strong>Devesh Singh Rathore</strong> is the creator of KubEdge, a tool designed to revolutionize cloud computing using Kubernetes and Docker.</p>
             <a href="/documents/documentation.html" class="btn btn-dark btn-lg mt-3">View Documents</a>
         </section>
 
         <!-- Documentation Section -->
         <section id="documentation" class="documentation mt-5">
-            <h2 class="text-center" style="color: #333;">Documentation</h2>
+            <h2 class="text-center" style="color: #fff;">Documentation</h2>
             <div class="row">
                 <div class="col-md-6">
                     <div class="card">
                         <img src="images/logo.png" alt="KubEdge Documentation" class="card-img-top logo-size">
                         <div class="card-body">
-                            <h5 class="card-title" style="color: #333;">KubEdge Deployment</h5>
+                            <h5 class="card-title" style="color: #fff;">KubEdge Deployment</h5>
                             <p class="card-text" style="color: #555;">Deploy and manage your applications easily with KubEdge.</p>
                             <a href="https://github.com/deveshrathore123/kubedge_server.git" class="btn btn-dark">View Documentation</a>
                         </div>
@@ -208,24 +208,24 @@
 
         <!-- Features Section -->
         <section class="features-section mt-5">
-            <h2 class="text-center" style="color: #333;">Features of KubEdge</h2>
+            <h2 class="text-center" style="color: #fff;">Features of KubEdge</h2>
             <div class="row">
                 <div class="col-md-4">
                     <div class="feature-card text-center">
-                        <h4 style="color: #333;">Scalability</h4>
-                        <p style="color: #555;">KubEdge offers seamless scalability for both small and large-scale cloud applications, enabling flexible deployment options to meet your needs.</p>
+                        <h4 style="color: #fff;">Scalability</h4>
+                        <p style="color: #fff;">KubEdge offers seamless scalability for both small and large-scale cloud applications, enabling flexible deployment options to meet your needs.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="feature-card text-center">
-                        <h4 style="color: #333;">Security</h4>
-                        <p style="color: #555;">With Kubernetes and Docker, KubEdge ensures that your cloud infrastructure is protected by top-notch security features, minimizing risk.</p>
+                        <h4 style="color: #fff;">Security</h4>
+                        <p style="color: #fff;">With Kubernetes and Docker, KubEdge ensures that your cloud infrastructure is protected by top-notch security features, minimizing risk.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="feature-card text-center">
-                        <h4 style="color: #333;">Monitoring</h4>
-                        <p style="color: #555;">Built-in Prometheus and Grafana integration provide detailed metrics and visualizations, ensuring you can monitor performance and optimize your infrastructure.</p>
+                        <h4 style="color: #fff;">Monitoring</h4>
+                        <p style="color: #fff;">Built-in Prometheus and Grafana integration provide detailed metrics and visualizations, ensuring you can monitor performance and optimize your infrastructure.</p>
                     </div>
                 </div>
             </div>
@@ -241,37 +241,125 @@
 
         <!-- Testimonial Section -->
         <section class="testimonials-section mt-5">
-            <h2 class="text-center" style="color: #333;">What Our Users Say</h2>
+            <h2 class="text-center" style="color: #fff;">What Our Users Say</h2>
             <div class="row">
                 <div class="col-md-6">
                     <div class="testimonial-card text-center">
-                        <p style="color: #555;">"KubEdge has drastically simplified our cloud operations. The integration with Kubernetes and Docker is flawless!"</p>
-                        <h5 style="color: #333;">- John Doe, Cloud Engineer</h5>
+                        <p style="color: #fff;">"KubEdge has drastically simplified our cloud operations. The integration with Kubernetes and Docker is flawless!"</p>
+                        <h5 style="color: #fff;">- John Doe, Cloud Engineer</h5>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="testimonial-card text-center">
-                        <p style="color: #555;">"As a developer, KubEdge's CI/CD pipeline has boosted our deployment process. It's a game changer!"</p>
-                        <h5 style="color: #333;">- Jane Smith, DevOps Specialist</h5>
+                        <p style="color: #fff;">"As a developer, KubEdge's CI/CD pipeline has boosted our deployment process. It's a game changer!"</p>
+                        <h5 style="color: #fff;">- Jane Smith, DevOps Specialist</h5>
                     </div>
                 </div>
             </div>
         </section>
     </main>
 
-    <!-- Footer Section -->
-    <footer class="bg-dark text-white text-center py-4">
-        <div class="footer-logo-container">
-            <img src="images/logo.png" alt="KubEdge Logo" class="footer-logo logo-size">
-        </div>
-        <p class="text-light">Founder: Devesh Singh Rathore | Email: <a href="mailto:deveshrathore13@gmail.com" class="text-primary">deveshrathore13@gmail.com</a></p>
-    </footer>
+     <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KubEdge</title>
+  <style>
+    /* Styling remains the same */
+    body {
+      line-height: 1;
+      background-color: #242426;
+      color: #fff;
+     font-family: 'Gloock', serif;
+      min-height: 100vh;
+      overflow-x: hidden;
+      background-attachment: scroll;
+      background-image: url('data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20512%20512%22%20width%3D%22512%22%20height%3D%22512%22%20preserveAspectRatio%3D%22none%22%3E%20%3Cstyle%20type%3D%22text%2Fcss%22%3E%20path%20%7B%20fill%3A%20none%3B%20stroke%3A%20rgba(255,255,255,0.027)%3B%20stroke-width%3A%202.01px%3B%20stroke-linecap%3A%20round%3B%20stroke-linejoin%3A%20round%3B%20%7D%20%3C%2Fstyle%3E%20%3Cpath%20vector-effect%3D%22non-scaling-stroke%22%20d%3D%22M424%2C331.8c0%2C12.5-6.7%2C24.1-17.5%2C30.3l-132%2C76.2c-10.8%2C6.3-24.2%2C6.3-35%2C0l-132-76.2%20C96.7%2C355.8%2C90%2C344.3%2C90%2C331.8V179.2c0-12.5%2C6.7-24.1%2C17.5-30.3l132-76.2c10.8-6.3%2C24.2-6.3%2C35%2C0l132%2C76.2%20c10.8%2C6.3%2C17.5%2C17.8%2C17.5%2C30.3V331.8z%20M238.5%2C73l-256%2C147.6%20M273.5%2C439l252.1-145.4%20M256%2C634.7V378.3c0-12.5%2C6.7-24.1-17.5%2C30.3%20l252.1-145.4%20M256-122.7v256.4c0%2C12.5-6.7%2C24.1-17.5%2C30.3%20l-256%2C147.6%22%2F%3E%3C%2Fsvg%3E'), linear-gradient(16deg, #242426 0%, #212124 60%);
+      background-size: 318px, auto;
+      background-position: center, 0% 0%;
+      background-repeat: repeat, repeat;
+    }
 
-    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+    footer {
+      background-color: #000;
+      color: #fff;
+      text-align: center;
+      position: relative;
+      bottom: 0;
+      width: 100%;
+      margin: 100px 0 !important;
+      padding: 30px;
+      font-family: 'Gloock', serif;
+    }
 
+    footer h3 {
+      color: #fff;
+      font-size: 30px;
+      margin-bottom: 20px;
+      font-weight: bold;
+    }
+
+    footer p {
+      font-size: 14px;
+      color: #ccc;
+      margin-bottom: 20px;
+    }
+
+    footer .footer-links {
+      margin: 20px 0;
+    }
+
+    footer .footer-links a {
+      margin: 0 20px;
+      color: #fff;
+      font-size: 16px;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    footer .footer-links a:hover {
+      color: #f39c12;
+    }
+
+    footer .contact-info {
+      margin: 10px 0;
+      font-size: 14px;
+    }
+
+    footer .contact-info a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    footer .contact-info a:hover {
+      color: #f39c12;
+    }
+
+  </style>
+</head>
+<body>
+  <!-- Your main content here -->
+
+  <footer>
+    <h3>KubEdge</h3>
+    <p>"Unlock Hosting at the Edge" | Founder & Creator: Devesh Singh Rathore</p>
+
+    <div class="footer-links">
+      <a href="#">About</a> |
+      <a href="#">Careers</a> |
+      <a href="#">Contact Us</a> |
+      <a href="#">Cookies, Terms, & Privacy</a> |
+      <a href="#">Help</a>
+    </div>
+
+    <div class="contact-info">
+      <p>Email: <a href="mailto:deveshrathore13@gmail.com">deveshrathore13@gmail.com</a></p>
+      <p>GitHub: <a href="https://github.com/deveshrathore123/kubelife_server.git" target="_blank">kubelife_server</a></p>
+    </div>
+
+    <p>&copy; 2024 KubEdge. All rights reserved.</p>
+  </footer>
 </body>
-
 </html>
