--- a/index.html
+++ b/index.html
@@ -133,10 +133,22 @@
     <!-- Main Content -->
     <main class="container my-5">
         <!-- Hero Section -->
-        <section class="hero text-center" data-aos="fade-in">
-            <a href="https://deveshrathore123.github.io/mainpage_code/" class="btn btn-dark btn-lg mt-3 px-5 py-3 shadow-lg" style="font-size: 1.2rem;">Dashboard</a>
+        <!-- Hero Section -->
 
-        </section>
+      <!-- Hero Section -->
+
+   
+<!-- Hero Section -->
+<!-- Hero Section -->
+<section class="hero text-center" data-aos="fade-in">
+    <a href="https://deveshrathore123.github.io/mainpage_code/" class="btn btn-light btn-lg mt-3 px-5 py-3 shadow-lg" 
+       style="font-size: 1.2rem; background-color: #fff; color: #000; border: 2px solid #fff; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);">
+       Dashboard
+    </a>
+</section>
+
+
+
 
         <!-- Tools Section -->
         <section class="tools-section" id="integrated-tools">
