--- a/index.html
+++ b/index.html
@@ -140,13 +140,15 @@
    
 <!-- Hero Section -->
 <!-- Hero Section -->
-<section class="hero text-center" data-aos="fade-in">
-    <a href="https://deveshrathore123.github.io/mainpage_code/" class="btn btn-light btn-lg mt-3 px-5 py-3 shadow-lg" 
-       style="font-size: 1.2rem; background-color: #fff; color: #000; border: 2px solid #fff; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);">
-       Dashboard
-    </a>
-</section>
 
+
+<section class="cta-section text-center py-4 mt-6" style="background-color: #fff;">
+            <h2 class="text-black">Get Started with KubEdge Today</h2>
+            <p class="text-black">Ready to experience the power of KubEdge? Sign up today and unlock the full potential of cloud computing with Kubernetes and Docker.</p>
+            <a href="https://deveshrathore123.github.io/mainpage_code/" class="btn btn-dark btn-lg mt-2 px-5 py-3 shadow-lg" style="font-size: 1.4rem;">Start Now</a>
+            <a href="https://deveshrathore123.github.io/mainpage_code/" class="btn btn-dark btn-lg mt-2 px-5 py-3 shadow-lg" style="font-size: 1.4rem;">Dashboard</a>
+
+        </section>
 
 
 
@@ -244,13 +246,7 @@
         </section>
 
         <!-- Call-to-Action Section -->
-        <section class="cta-section text-center py-5 mt-5" style="background-color: #333;">
-            <h2 class="text-white">Get Started with KubEdge Today</h2>
-            <p class="text-white">Ready to experience the power of KubEdge? Sign up today and unlock the full potential of cloud computing with Kubernetes and Docker.</p>
-            <a href="https://deveshrathore123.github.io/mainpage_code/" class="btn btn-dark btn-lg mt-3 px-5 py-3 shadow-lg" style="font-size: 1.2rem;">Start Now</a>
-
-        </section>
-
+        
         <!-- Testimonial Section -->
         <section class="testimonials-section mt-5">
             <h2 class="text-center" style="color: #fff;">What Our Users Say</h2>
