--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -142,13 +143,22 @@
 <!-- Hero Section -->
 
 
-<section class="cta-section text-center py-4 mt-6" style="background-color: #fff;">
-            <h2 class="text-black">Get Started with KubEdge Today</h2>
-            <p class="text-black">Ready to experience the power of KubEdge? Sign up today and unlock the full potential of cloud computing with Kubernetes and Docker.</p>
-            <a href="https://deveshrathore123.github.io/mainpage_code/" class="btn btn-dark btn-lg mt-2 px-5 py-3 shadow-lg" style="font-size: 1.4rem;">Start Now</a>
-            <a href="https://deveshrathore123.github.io/mainpage_code/" class="btn btn-dark btn-lg mt-2 px-5 py-3 shadow-lg" style="font-size: 1.4rem;">Dashboard</a>
 
-        </section>
+<section class="cta-section text-center py-4 mt-6" style="background-color: #fff; display: flex; flex-direction: column; justify-content: center; align-items: center; height: 200px; padding: 40px 20px;">
+    <h2 class="text-black" style="margin-bottom: 15px;">Get Started with KubEdge Today</h2>
+    <p class="text-black" style="margin-bottom: 25px;">Ready to experience the power of KubEdge? Sign up today and unlock the full potential of cloud computing with Kubernetes and Docker.</p>
+    
+    <!-- Button Group -->
+    <div style="display: flex; justify-content: space-between; width: 100%; max-width: 600px; padding: 0 20px;">
+        <a href="https://deveshrathore123.github.io/mainpage_code/" class="btn btn-dark btn-lg mt-2 px-5 py-3 shadow-lg" style="font-size: 1.4rem; margin-right: 20px;">
+            Signup
+        </a>
+        <a href="https://deveshrathore123.github.io/mainpage_code/" class="btn btn-dark btn-lg mt-2 px-5 py-3 shadow-lg" style="font-size: 1.4rem;">
+            Login
+        </a>
+    </div>
+</section>
+
 
 
 
