--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <!-- Hero Section -->
 
 
-
+<!-- CTA Section -->
 <section class="cta-section text-center py-4 mt-6" style="background-color: #fff; display: flex; flex-direction: column; justify-content: center; align-items: center; height: 200px; padding: 40px 20px;">
     <h2 class="text-black" style="margin-bottom: 15px;">Get Started with KubEdge Today</h2>
     <p class="text-black" style="margin-bottom: 25px;">Ready to experience the power of KubEdge? Sign up today and unlock the full potential of cloud computing with Kubernetes and Docker.</p>
@@ -159,41 +159,42 @@
     </div>
 </section>
 
+<!-- Tools Section -->
+<section class="tools-section" id="integrated-tools" style="margin-top: 80px;">
+    <h2 class="text-center" style="color: #fff;">Integrated Tools</h2>
+    <div class="tools-cards d-flex justify-content-center flex-wrap gap-5">
+        <!-- Tool Cards -->
+        <div class="tools-card">
+            <img src="images/CiCd.png" alt="CI/CD" class="img-fluid mb-3 logo-size">
+            <h4 style="color: #fff;">CI/CD</h4>
+            <p style="color: #fff;">Seamless integration for continuous integration and delivery.</p>
+        </div>
+        <div class="tools-card">
+            <img src="images/docker.png" alt="Docker" class="img-fluid mb-3 logo-size">
+            <h4 style="color: #fff;">Docker</h4>
+            <p style="color: #fff;">Streamline application deployment with containerization.</p>
+        </div>
+        <div class="tools-card">
+            <img src="images/Kubernetes.png" alt="Kubernetes" class="img-fluid mb-3 logo-size">
+            <h4 style="color: #fff;">Kubernetes</h4>
+            <p style="color: #fff;">Effortless orchestration for complex cloud environments.</p>
+        </div>
+        <div class="tools-card">
+            <img src="images/Prometheus.png" alt="Prometheus" class="img-fluid mb-3 logo-size">
+            <h4 style="color: #fff;">Prometheus</h4>
+            <p style="color: #fff;">Advanced monitoring and alerting for cloud infrastructure.</p>
+        </div>
+        <div class="tools-card">
+            <img src="images/grafana.png" alt="Grafana" class="img-fluid mb-3 logo-size">
+            <h4 style="color: #fff;">Grafana</h4>
+            <p style="color: #fff;">Visualize and analyze your cloud infrastructure metrics.</p>
+        </div>
+    </div>
+</section>
 
 
 
-        <!-- Tools Section -->
-        <section class="tools-section" id="integrated-tools">
-            <h2 class="text-center" style="color: #fff;">Integrated Tools</h2>
-            <div class="tools-cards d-flex justify-content-center flex-wrap gap-5">
-                <!-- Tool Cards -->
-                <div class="tools-card">
-                    <img src="images/CiCd.png" alt="CI/CD" class="img-fluid mb-3 logo-size">
-                    <h4 style="color: #fff;">CI/CD</h4>
-                    <p style="color: #fff;">Seamless integration for continuous integration and delivery.</p>
-                </div>
-                <div class="tools-card">
-                    <img src="images/docker.png" alt="Docker" class="img-fluid mb-3 logo-size">
-                    <h4 style="color: #fff;">Docker</h4>
-                    <p style="color: #fff;">Streamline application deployment with containerization.</p>
-                </div>
-                <div class="tools-card">
-                    <img src="images/Kubernetes.png" alt="Kubernetes" class="img-fluid mb-3 logo-size">
-                    <h4 style="color: #fff;">Kubernetes</h4>
-                    <p style="color: #fff;">Effortless orchestration for complex cloud environments.</p>
-                </div>
-                <div class="tools-card">
-                    <img src="images/Prometheus.png" alt="Prometheus" class="img-fluid mb-3 logo-size">
-                    <h4 style="color: #fff;">Prometheus</h4>
-                    <p style="color: #fff;">Advanced monitoring and alerting for cloud infrastructure.</p>
-                </div>
-                <div class="tools-card">
-                    <img src="images/grafana.png" alt="Grafana" class="img-fluid mb-3 logo-size">
-                    <h4 style="color: #fff;">Grafana</h4>
-                    <p style="color: #fff;">Visualize and analyze your cloud infrastructure metrics.</p>
-                </div>
-            </div>
-        </section>
+        <
 
         <!-- About Section -->
         <section class="about-section mt-5 text-center">
