--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
         <!-- Features Section -->
         <section class="features-section mt-5">
-            <h2 class="text-center" style="color: #000;">Features of KubEdge</h2>
+            <h2 class="text-center mb-4" style="color: #000;">Features of KubEdge</h2>
             <div class="row">
                 <div class="col-md-4">
                     <div class="feature-card text-center">
