--- a/index.html
+++ b/index.html
@@ -331,7 +331,8 @@
   <!-- Your main content here -->
 
   <footer>
-    <h3>KubEdge</h3>
+<div class="contanier-fluid">
+        <h3>KubEdge</h3>
     <p>"Unlock Hosting at the Edge" | Founder & Creator: Devesh Singh Rathore</p>
 
     <div class="footer-links">
@@ -348,6 +349,7 @@
     </div>
 
     <p>&copy; 2024 KubEdge. All rights reserved.</p>
+</div>
   </footer>
 </body>
 </html>
