--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
     </div>
     
     <!-- Navigation Menu -->
+      <div class="log">
+          <img src="images/logo.png" alt="logo" class="img-fluid mb-3 logo-size">
+      </div>
     <nav>
       <ul>
         <li><a href="#pricing">Pricing</a></li>
