--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
       nav ul li {
         margin-bottom: 10px;
       }
+        .logo {
+            width="180px";
     }
   </style>
 </head>
@@ -114,10 +116,7 @@
          <div class="log">
           <img src="images/logo.png" alt="logo" class="img-fluid mb-3 logo-size">
       </div>
-    <div>
-      <div class="header-title">KubeEdge</div>
-      <div class="header-tagline">Unlock Hosting at the EDGE</div>
-    </div>
+    
     
     <!-- Navigation Menu -->
 
