--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       nav ul li {
         margin-bottom: 10px;
       }
-        .logo {
+        .logo img {
             width="180px";
     }
   </style>
@@ -114,7 +114,7 @@
   <!-- Header Section -->
   <header>
          <div class="log">
-          <img src="images/logo.png" alt="logo" class="img-fluid mb-3 logo-size">
+          <img src="images/logo.png" alt="logo" class="img-fluid">
       </div>
     
     
