--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
         margin-bottom: 10px;
       }
         .logo img {
-            width="180px";
+            width="90px";
+            hight="auto";
     }
   </style>
 </head>
