--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
   <!-- Header Section -->
   <header>
-         <div class="log">
+         <div class="logo">
           <img src="images/logo.png" alt="logo" class="img-fluid">
       </div>
     
