--- a/index.html
+++ b/index.html
@@ -104,9 +104,13 @@
       nav ul li {
         margin-bottom: 10px;
       }
+        .logo {
+    width: 340px;
+    height: auto;
+}
         .logo img {
-            width="90px";
-            hight="auto";
+            width="100%";
+        
     }
   </style>
 </head>
