--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <a href="https://deveshrathore123.github.io/mainpage_code/" class="btn btn-dark btn-lg mt-2 px-5 py-3 shadow-lg" style="font-size: 1.4rem; margin-right: 20px;">
                     Signup
                 </a>
-                <a href="https://deveshrathore123.github.io/mainpage_code/" class="btn btn-dark btn-lg mt-2 px-5 py-3 shadow-lg" style="font-size: 1.4rem;">
+                <a href="https://deveshrathore123.github.io/login_page-/" class="btn btn-dark btn-lg mt-2 px-5 py-3 shadow-lg" style="font-size: 1.4rem;">
                     Login
                 </a>
             </div>
