--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
     <!-- Main Content -->
     <main class="container my-5">
         <!-- Hero Section -->
+        <section class="hero-section" style="position: relative; background-image: url('images/background.png'); background-size: cover; background-position: center; height: 100vh; opacity: 0.85;">
+            <div class="hero-overlay" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0, 0, 0, 0.4); z-index: 1;"></div>
+            <div class="hero-content text-center text-white" style="position: relative; z-index: 2; padding-top: 10vh;">
+                <h1 style="font-size: 4rem;">Welcome to KubEdge</h1>
+                <p style="font-size: 1.5rem;">Revolutionizing Cloud Computing with Kubernetes and Docker</p>
+                <a href="#get-started" class="btn btn-light btn-lg mt-4">Get Started</a>
+            </div>
+        </section>
 
         <!-- CTA Section -->
         <section class="cta-section text-center py-4 mt-6" style="background-color: #fff; display: flex; flex-direction: column; justify-content: center; align-items: center; height: 200px; padding: 40px 20px;">
