--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             
             <!-- Button Group -->
             <div style="display: flex; justify-content: space-between; width: 100%; max-width: 600px; padding: 0 20px;">
-                <a href="https://deveshrathore123.github.io/login_page-/signup/" class="btn btn-dark btn-lg mt-2 px-5 py-3 shadow-lg" style="font-size: 1.4rem; margin-right: 20px;">
+                <a href="https://deveshrathore123.github.io/mainpage_code/" class="btn btn-dark btn-lg mt-2 px-5 py-3 shadow-lg" style="font-size: 1.4rem; margin-right: 20px;">
                     Signup
                 </a>
                 <a href="https://deveshrathore123.github.io/login_page-/" class="btn btn-dark btn-lg mt-2 px-5 py-3 shadow-lg" style="font-size: 1.4rem;">
@@ -359,4 +359,4 @@
 </div>
   </footer>
 </body>
-</html> 
+</html>
