--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       font-family: 'Gloock', serif;
       margin: 0;
       padding: 0;
+background-color: red;
     }
 
     /* Header Styling */
