--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body style="background-color: white;"> <!-- Changed background color here -->
+<body style="background-color: #adb3f1;"> <!-- Background color updated here -->
 
     <!-- Header -->
     <html lang="en">
@@ -251,108 +251,28 @@
         
     </main>
 
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KubEdge</title>
-  <style>
-    /* Styling remains the same */
-    body {
-      line-height: 1;
-      background-color: #242426;
-      color: #fff;
-     font-family: 'Gloock', serif;
-      min-height: 100vh;
-      overflow-x: hidden;
-      background-attachment: scroll;
-      background-size: 318px, auto;
-      background-position: center, 0% 0%;
-      background-repeat: repeat, repeat;
-    }
+    <!-- Footer -->
+    <footer>
+        <div class="contanier-fluid">
+            <h3>KubEdge</h3>
+            <p>"Unlock Hosting at the Edge" | Founder & Creator: Devesh Singh Rathore</p>
 
-    footer {
-      background-color: #000;
-      color: #fff;
-      text-align: center;
-      position: relative;
-      bottom: 0;
-      width: 100%;
-      margin: 100px 0 !important;
-      padding: 30px;
-      font-family: 'Gloock', serif;
-    }
+            <div class="footer-links">
+                <a href="#">About</a> |
+                <a href="#">Careers</a> |
+                <a href="#">Contact Us</a> |
+                <a href="#">Cookies, Terms, & Privacy</a> |
+                <a href="#">Help</a>
+            </div>
 
-    footer h3 {
-      color: #fff;
-      font-size: 30px;
-      margin-bottom: 20px;
-      font-weight: bold;
-    }
+            <div class="contact-info">
+                <p>Email: <a href="mailto:deveshrathore13@gmail.com">deveshrathore13@gmail.com</a></p>
+                <p>GitHub: <a href="https://github.com/deveshrathore123/kubelife_server.git" target="_blank">kubelife_server</a></p>
+            </div>
 
-    footer p {
-      font-size: 14px;
-      color: #ccc;
-      margin-bottom: 20px;
-    }
-
-    footer .footer-links {
-      margin: 20px 0;
-    }
-
-    footer .footer-links a {
-      margin: 0 20px;
-      color: #fff;
-      font-size: 16px;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    footer .footer-links a:hover {
-      color: #f39c12;
-    }
-
-    footer .contact-info {
-      margin: 10px 0;
-      font-size: 14px;
-    }
-
-    footer .contact-info a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    footer .contact-info a:hover {
-      color: #f39c12;
-    }
-
-  </style>
-</head>
-<body>
-  <!-- Your main content here -->
-
-  <footer>
-<div class="contanier-fluid">
-        <h3>KubEdge</h3>
-    <p>"Unlock Hosting at the Edge" | Founder & Creator: Devesh Singh Rathore</p>
-
-    <div class="footer-links">
-      <a href="#">About</a> |
-      <a href="#">Careers</a> |
-      <a href="#">Contact Us</a> |
-      <a href="#">Cookies, Terms, & Privacy</a> |
-      <a href="#">Help</a>
-    </div>
-
-    <div class="contact-info">
-      <p>Email: <a href="mailto:deveshrathore13@gmail.com">deveshrathore13@gmail.com</a></p>
-      <p>GitHub: <a href="https://github.com/deveshrathore123/kubelife_server.git" target="_blank">kubelife_server</a></p>
-    </div>
-
-    <p>&copy; 2024 KubEdge. All rights reserved.</p>
-</div>
-  </footer>
+            <p>&copy; 2024 KubEdge. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
+
 </html>
